tests/negative/gold/incomplete_block_call_test.gold
tests/negative/incomplete_block_call_test.toit:6:9: error: Incomplete expression
  block.
        ^
tests/negative/incomplete_block_call_test.toit:9:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
Compilation failed.
